--- a/app/inserts/head.erb
+++ b/app/inserts/head.erb
@@ -15,3 +15,5 @@
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
 <% end %>
+<link rel="stylesheet" href="/normalize.css">
+<link rel="stylesheet" href="/app.css">
