--- a/app/layouts/default.erb
+++ b/app/layouts/default.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <%= @document.meta.lang %>
     <head>
-        <%= App::insert 'head' %>
+        <%= self.insert 'head' %>
     </head>
     <body>
         <%= yield %>
